# MindClash

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  pyproject.toml  setup_mindclash.py
assets/music/: README.md
assets/sfx/: README.md
assets/thumbnails/: README.md
assets/voices/: README.md
config/: channels.yaml  mindclash.yaml.example  voices.yaml
config/prompts/: README.md
docs/: DEBATE_ENGINE.md  EDITORIAL_GUIDE.md  KNOWLEDGE_BASE.md  PIPELINE.md  PUBLISHING.md  TTS_GUIDE.md
episodes/EP001_jancovici-synthesis/: README.md  script.json  show_notes.md
episodes/EP002_lecun-vs-hinton/: README.md  show_notes.md
episodes/EP002_lovins-synthesis/: README.md  script.json  show_notes.md
episodes/EP003_jancovici-vs-lovins/: README.md  debate_raw.json  script.json  show_notes.md
episodes/EP003_piketty-vs-acemoglu/: README.md  show_notes.md
episodes/EP004_harari-vs-zuboff/: README.md  show_notes.md
episodes/EP005_jancovici-vs-sachs/: README.md  show_notes.md
mindclash/: cli.py
mindclash/analyze/: base.py  (+4 more)
scripts/: generate_background.py  generate_debate_background.py  generate_debate_ep003.py  generate_lovins_script.py  mix_ep001.py  mix_ep002.py  mix_ep003.py  produce_ep001.py  produce_ep002.py  produce_ep003.py  render_video_ep001.py  render_video_ep002.py  render_video_ep003.py  test_debate_tour1.py  test_kokoro.py  test_one_section.py  test_piper_siwis.py  test_piper_tom.py
tests/: conftest.py  test_analyze.py  test_debate.py  test_ingest.py  test_knowledge.py  test_podcast.py  test_publish.py  test_transcribe.py
(+85 files in other folders)
